--- a/potatohead.html
+++ b/potatohead.html
@@ -10,15 +10,15 @@
     <h1>Mr. Potato Head</h1>
     <div id="potato">
       <img id="body" src="assets/body.png">
-      <img id="arms">
+      <img id="arms" src="assets/arms.png">
       <img id="ears">
       <img id="eyes">
       <img id="mouth">
       <img id="nose">
-      <img id="eyebrows">
+      <img id="eyebrows" src="assets/eyebrows.png">
       <img id="glasses">
       <img id="hat">
-      <img id="moustache">
+      <img id="moustache" src="assets/moustache.png">
       <img id="shoes">
     </div>
     <script>
